[gd_scene load_steps=2 format=2]

[ext_resource path="res://Events/Audition/Audition.gd" type="Script" id=1]

[node name="Audition" type="Spatial"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Layout" type="VBoxContainer" parent="CanvasLayer/Interface"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 40

[node name="Group" type="VBoxContainer" parent="CanvasLayer/Interface/Layout"]
margin_right = 984.0
margin_bottom = 18.0

[node name="Info" type="HBoxContainer" parent="CanvasLayer/Interface/Layout/Group"]
margin_right = 984.0
margin_bottom = 14.0

[node name="Money" type="Label" parent="CanvasLayer/Interface/Layout/Group/Info"]
unique_name_in_owner = true
margin_bottom = 14.0

[node name="Characters" type="HBoxContainer" parent="CanvasLayer/Interface/Layout/Group"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 984.0
margin_bottom = 18.0

[node name="AuditionerInfo" type="MarginContainer" parent="CanvasLayer/Interface/Layout"]
margin_top = 58.0
margin_right = 984.0
margin_bottom = 160.0

[node name="Stats" type="VBoxContainer" parent="CanvasLayer/Interface/Layout/AuditionerInfo"]
margin_right = 984.0
margin_bottom = 102.0
custom_constants/separation = 20

[node name="Name" type="Label" parent="CanvasLayer/Interface/Layout/AuditionerInfo/Stats"]
unique_name_in_owner = true
margin_right = 984.0
margin_bottom = 14.0
text = "Name"

[node name="Cost" type="Label" parent="CanvasLayer/Interface/Layout/AuditionerInfo/Stats"]
unique_name_in_owner = true
margin_top = 34.0
margin_right = 984.0
margin_bottom = 48.0
text = "Cost"

[node name="Voice" type="Label" parent="CanvasLayer/Interface/Layout/AuditionerInfo/Stats"]
unique_name_in_owner = true
margin_top = 68.0
margin_right = 984.0
margin_bottom = 82.0
text = "Voice"

[node name="Traits" type="HBoxContainer" parent="CanvasLayer/Interface/Layout/AuditionerInfo/Stats"]
unique_name_in_owner = true
margin_top = 102.0
margin_right = 984.0
margin_bottom = 102.0
custom_constants/separation = 20

[node name="Auditioners" type="HBoxContainer" parent="CanvasLayer/Interface/Layout"]
margin_top = 200.0
margin_right = 984.0
margin_bottom = 200.0
custom_constants/separation = 20

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/Interface/Layout"]
margin_top = 240.0
margin_right = 984.0
margin_bottom = 300.0
custom_constants/separation = 20

[node name="Auditioner" type="HBoxContainer" parent="CanvasLayer/Interface/Layout/Buttons"]
margin_right = 984.0
margin_bottom = 20.0

[node name="Yes" type="Button" parent="CanvasLayer/Interface/Layout/Buttons/Auditioner"]
margin_right = 34.0
margin_bottom = 20.0
text = "Yes"

[node name="No" type="Button" parent="CanvasLayer/Interface/Layout/Buttons/Auditioner"]
margin_left = 38.0
margin_right = 68.0
margin_bottom = 20.0
text = "No"

[node name="Skip" type="Button" parent="CanvasLayer/Interface/Layout/Buttons/Auditioner"]
margin_left = 72.0
margin_right = 110.0
margin_bottom = 20.0
text = "Skip"

[node name="Exit" type="Button" parent="CanvasLayer/Interface/Layout/Buttons"]
margin_top = 40.0
margin_right = 984.0
margin_bottom = 60.0
text = "End Audition"

[connection signal="pressed" from="CanvasLayer/Interface/Layout/Buttons/Auditioner/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/Layout/Buttons/Auditioner/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/Layout/Buttons/Auditioner/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/Layout/Buttons/Exit" to="." method="_on_Exit_pressed"]
